# sagbiagi

./: .firebaseignore  .firebaserc  .gitattributes  .gitignore  Development.ja.md  Development.md  README.ja.md  README.md  Setup_Ubuntu_JP.md  TESTING.md  build_all.bat  build_frontend.bat  build_frontend.sh  deploy.txt  firebase.json  firebasedeploy.txt  firebaserc  note.md  package-lock.json  package.json  setup_go.sh  start_sagbi.sh  startup.md  terminal_receiver.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.wrangler/cache/: wrangler-account.json
installer/: BUILD.md  CMakeLists.txt  README.md  sagbi_installer.cpp  sagbi_installer_linux.sh
installer/rs/: Cargo.toml  dev.md  main.rs
k8s/: deployment.yaml
public/html/: 404.html  AgentModel.tsx  App.css  App.test.tsx  App.tsx  agent.ts  app1209.txt  chat.js  config.json  explower.html  index.html  kitaiti.html  main.tsx  manifest.json  plower.html  profile.html  systemprompt_en.md  systemprompt_ja.md  vite-env.d.ts
public/html/explower/: manual.html  style.css
public/html/explower/hf/plower/: README.md
public/html/g1m/: g1m.html
public/html/plower/: index.html  script.js  systemprompt_en.md  systemprompt_ja.md  worker.js
public/html/plower/hf/plower/: .dockerignore  Dockerfile  start.sh
rag/: knowledge.txt
signaling/: Dockerfile  chat.spec.ts  go.mod  main.go  main_test.go
